log/nqp.jvm_summary.out
/home/coke/perl5/perlbrew/perls/perl-5.20.1/bin/perl -MExtUtils::Command -e mkpath bin
javac -source 1.7 -cp 3rdparty/asm/asm-4.1.jar:3rdparty/asm/asm-tree-4.1.jar:3rdparty/jline/jline-1.0.jar:3rdparty/jna/jna.jar -g -d bin -encoding UTF8 src/vm/jvm/runtime/org/perl6/nqp/io/*.java src/vm/jvm/runtime/org/perl6/nqp/jast2bc/*.java src/vm/jvm/runtime/org/perl6/nqp/runtime/*.java src/vm/jvm/runtime/org/perl6/nqp/sixmodel/*.java src/vm/jvm/runtime/org/perl6/nqp/sixmodel/reprs/*.java src/vm/jvm/runtime/org/perl6/nqp/tools/*.java 
src/vm/jvm/runtime/org/perl6/nqp/io/StandardReadHandle.java:15: error: cannot find symbol
public class StandardReadHandle implements IIOClosable, IIOEncodable, IIOSyncReadable, IIOInteractive, IIOPossiblyTTY {
                                                                                                       ^
  symbol: class IIOPossiblyTTY
src/vm/jvm/runtime/org/perl6/nqp/io/StandardWriteHandle.java:14: error: cannot find symbol
public class StandardWriteHandle implements IIOClosable, IIOSeekable, IIOEncodable, IIOSyncWritable, IIOPossiblyTTY {
                                                                                                     ^
  symbol: class IIOPossiblyTTY
src/vm/jvm/runtime/org/perl6/nqp/runtime/Ops.java:63: error: cannot find symbol
import org.perl6.nqp.io.IIOPossiblyTTY;
                       ^
  symbol:   class IIOPossiblyTTY
  location: package org.perl6.nqp.io
src/vm/jvm/runtime/org/perl6/nqp/runtime/Ops.java:820: error: cannot find symbol
            if (h.handle instanceof IIOPossiblyTTY)
                                    ^
  symbol:   class IIOPossiblyTTY
  location: class Ops
src/vm/jvm/runtime/org/perl6/nqp/runtime/Ops.java:821: error: cannot find symbol
                return ((IIOPossiblyTTY)h.handle).isTTY(tc) ? 1 : 0;
                         ^
  symbol:   class IIOPossiblyTTY
  location: class Ops
Note: src/vm/jvm/runtime/org/perl6/nqp/runtime/Ops.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
5 errors
Makefile:213: recipe for target 'nqp-runtime.jar' failed
make: *** [nqp-runtime.jar] Error 1
